added image that aligns with the bus stop map inbound and outbound, tested directions which are correct

--- a/mbta-tracker/src/App.css
+++ b/mbta-tracker/src/App.css
@@ -17,7 +17,13 @@
   justify-content: space-around;
 }
 
-#BusImage {
+#BusImage, #BusMap {
 height:200px;
 width:auto;
+}
+
+#BusMap {
+  border-radius: 3%;
+  height:400px;
+  width:auto; 
 }
